--- a/1.html
+++ b/1.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <h1> GIT </h1>
     Email:<input type="text" id="email" placeholder="enter your email id"><br><br>
     <button type="button" id="btn">show Email</button><br><br>
     <div id="div" style="height: 20px;background-color:aqua;padding: 10px;width: 20%;"></div>
