--- a/1.html
+++ b/1.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1> THIS IS A DEMO AFTER A LONG TIME </h1>
-    <h1> GIT </h1>
+<!--     <h1> GIT </h1>
     Email:<input type="text" id="email" placeholder="enter your email id"><br><br>
     <button type="button" id="btn">show Email</button><br><br>
     <div id="div" style="height: 20px;background-color:aqua;padding: 10px;width: 20%;"></div>
@@ -21,7 +21,7 @@
             })
         })
 
-    </script>
+    </script> -->
 
 </body>
 
