--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-<!--   <h1> Welcome to CitiusTech </h1>
+  <h1> Welcome to CitiusTech </h1>
   <h2> hi Shravan </h2>
-    <h3> This is Azure app </h3> -->
-    <h1> IN GIT AFTER A LONG TIME </h1>
-    <h1> Unable to use .NET </h1>
+    <h3> This is Azure app </h3>
+  
   </body>
 </html>
